--- a/about.html
+++ b/about.html
@@ -24,8 +24,9 @@
 <body>
     <header class="header">
         <nav class="nav">
-          <a href="index.html" class='logo-nav'><h2 class="nav__logo"><span class="stem">STEM</span> <span id="link" class="">link</span></h2></a>
-          
+          <a href="index.html" class="nav-logo"
+          ><img src="./img/logo-stem.png" alt=""
+        /></a>
           <ul class="nav__links">
             <li class="nav__item">
                 <a class="nav__link" href="index.html">Home</a>
