updated footer nav logo

--- a/contact.html
+++ b/contact.html
@@ -179,7 +179,9 @@
           <a class="footer__link" href="#">Contact Us</a>
         </li> -->
     </ul>
-    <h2 class="nav__logo text-center"><span class="stem">STEM</span> link</h2>
+    <a href="index.html" class="nav-logo text-center"
+        ><img src="./img/logo-stem.png" alt=""
+      /></a>
     <p class="text-center copyright">&copy; Copyright 2021 STEM link
     </p>
     <!-- /////////////////////////////////////////////////////////
