--- a/index.html
+++ b/index.html
@@ -49,8 +49,20 @@
     <link rel="stylesheet" href="style.css" />
     <title>STEM link</title>
     <script defer src="script.js"></script>
-    
-    <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/2cea1712e979434b3492355fe/0e414005a51bf3a9b43cf0eeb.js");</script>
+
+    <script id="mcjs">
+      !(function (c, h, i, m, p) {
+        (m = c.createElement(h)),
+          (p = c.getElementsByTagName(h)[0]),
+          (m.async = 1),
+          (m.src = i),
+          p.parentNode.insertBefore(m, p);
+      })(
+        document,
+        "script",
+        "https://chimpstatic.com/mcjs-connected/js/users/2cea1712e979434b3492355fe/0e414005a51bf3a9b43cf0eeb.js"
+      );
+    </script>
   </head>
   <body>
     <header class="header">
@@ -120,7 +132,11 @@
             </ul>
           </li> -->
           <li class="nav__item">
-            <a class="nav__link__Drop" href="https://stem.searchbar.lk/courses/stem-link">Platform</a>
+            <a
+              class="nav__link__Drop"
+              href="https://stem.searchbar.lk/courses/stem-link"
+              >Platform</a
+            >
           </li>
           <li class="nav__item">
             <a class="nav__link__Drop" href="./Blog/index.html">Blogs</a>
@@ -244,8 +260,6 @@
     <!-- ////////////////////////////////////////////////////////////////////////////////
                                             Newsletter
   /////////////////////////////////////////////////////////////////////////////////// -->
-
-      
 
     <!-- ////////////////////////////////////////////////////////////////////////////////
                                             Our Work
@@ -1323,7 +1337,9 @@
           <a class="footer__link" href="#section--2">Testimonials</a>
         </li>
       </ul>
-      <h2 class="nav__logo text-center"><span class="stem">STEM</span> link</h2>
+      <a href="index.html" class="nav-logo text-center"
+        ><img src="./img/logo-stem.png" alt=""
+      /></a>
       <p class="text-center copyright">&copy; Copyright 2021 STEM link</p>
     </footer>
 
@@ -1350,7 +1366,10 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="//code.tidio.co/inlqskk55tp6vwa8sj060zfrqz8eno6r.js" async></script>
+    <script
+      src="//code.tidio.co/inlqskk55tp6vwa8sj060zfrqz8eno6r.js"
+      async
+    ></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
   </body>
 </html>
