adjusted issues with course details

--- a/about.html
+++ b/about.html
@@ -169,9 +169,9 @@
                               <p class="level">Level – Beginner</p>
                               <p class="pt-5">What do you get from this course?</p>
                               <ul>
-                                <li>We would be covering the complete syllabus in an adequate rate to face the term examinations</li>
-                                <li>All the lessons would be demonstrated practically through real world example digital clips that would create more sense and interest towards learning materials.</li>
-                                <li>Past paper discussion in the end of each lesson and each term.</li>                            
+                                <li>Gain hands on experience building real life web development projects while learning.</li>
+                                <li>Gain a thorough understanding of modern web page layout methods.</li>
+                                                            
                               </ul>
                             </div>
                             <div class="course-content">
@@ -258,8 +258,10 @@
           </div>
             <div class="science  crypto-course py-5" id = "crypto">
               <h1 class="class--heading text-center ">Crypto Currency Investing</h1>
-              <p class="class--intro">The importance of Learning English cannot be denied and ignored since English is one of the most common languages spoken in the world. 
-                Through perfect practice and usage of English with a clear guidance would help you to be fluent in English which is a vital qualification for almost every aspect of the modern world.  </p>
+              <p class="class--intro">Learning about crypto can be hard as information is scattered everywhere and not everyone knows how crupto works 
+                so we have put up a simple course with the goal of making any beginner to understand the blockchain and cryptocurrency ecosystem
+                and how to make it in this market.
+              </p>
               <div class="accordion accordion-flush " id="accordionFlushExample">
                   <div class="accordion-item ">
                     <h2 class="accordion-header" id="flush-headingOne">
@@ -274,9 +276,9 @@
                           <p class="level">Level – Beginner</p>
                           <p class="pt-5">What do you get from this course?</p>
                           <ul>
-                            <li>We would be covering the complete syllabus in an adequate rate to face the term examinations</li>
-                            <li>All the lessons would be demonstrated practically through real world example digital clips that would create more sense and interest towards learning materials.</li>
-                            <li>Past paper discussion in the end of each lesson and each term.</li>                            
+                            <li>Complete guide to blockchain and cryptocurrency.</li>
+                            <li>Lifetime access to course content updates.</li>
+                            <li>Lifetime access to investment strategies.</li>                            
                           </ul>
                         </div>
                         <div class="course-content">
