About, Contact  and Home changes have been made

--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
         </div>
     </section>
 
-    <section class="p-5 section classes-section" id="python">
+    <section class=" section classes-section" id="python">
         <div class="classes class--box">
             <div class="python-course py-5">
                 <h1 class="class--heading text-center ">Python Crash Course</h1>
@@ -151,8 +151,7 @@
             <!-- Second item -->
             <div class="webdev-course science py-5" id = "webdev">
                 <h1 class="class--heading text-center ">Front-End Development</h1>
-                <p class="class--intro">We have carefully designed this course in a project based manner where you will have a complete project
-                  added to your portfolio by the end of each module.
+                <p class="class--intro">Learn Web Development using HTML, CSS, JavaScript, and also cutting-edge technologies such as DaisyUI, Tailwind, Bootstrap, Figma and much more with 4 complete Projects. By the end of this course you will be familliar with programming principles, UI/UX, Web Technologies and Freelancing
                 </p>
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="flush-headingTwo">
@@ -166,12 +165,16 @@
                           <div class="accordion-body">
                             <div class="course-basic">
                               <img src="./img/Course-img/web.png" alt="web-dev">
-                              <p class="level">Level – Beginner</p>
+                              <p class="level">Level – Absolute Beginner</p>
                               <p class="pt-5">What do you get from this course?</p>
                               <ul>
-                                <li>We would be covering the complete syllabus in an adequate rate to face the term examinations</li>
-                                <li>All the lessons would be demonstrated practically through real world example digital clips that would create more sense and interest towards learning materials.</li>
-                                <li>Past paper discussion in the end of each lesson and each term.</li>                            
+                                <li>4 Complete projects to add in to your portfolio</li>
+                                <li>Tons of Resources to use in Development</li>
+                                <li>Comprehensive understanding in all the Web Technologies.</li>                            
+                                <li>Understanding on Design Principles, Colors and User Experince Design</li>                            
+                                <li>All the lecture notes, recordings and a complete resource pool </li>                            
+                                <li>Best coding practices to stand out from junior developers </li>                            
+                                <li>Hands-on experince on Web Frameworks to make the development journey much easier </li>                            
                               </ul>
                             </div>
                             <div class="course-content">
@@ -258,8 +261,7 @@
           </div>
             <div class="science  crypto-course py-5" id = "crypto">
               <h1 class="class--heading text-center ">Crypto Currency Investing</h1>
-              <p class="class--intro">The importance of Learning English cannot be denied and ignored since English is one of the most common languages spoken in the world. 
-                Through perfect practice and usage of English with a clear guidance would help you to be fluent in English which is a vital qualification for almost every aspect of the modern world.  </p>
+              <p class="class--intro">Learn Crypto Currency Investing with our experienced tutors who have gained the best from it and are involved in Web3. Crypto Investment would give you hands-on knowledge with all the tools and skills that are required to initate your investment portfolio</p>
               <div class="accordion accordion-flush " id="accordionFlushExample">
                   <div class="accordion-item ">
                     <h2 class="accordion-header" id="flush-headingOne">
@@ -300,7 +302,7 @@
                </div>
 
           </div>
-            <div class="course py-5" id = "robotics">
+            <div class="course robotics-course py-5" id = "robotics">
               <h1 class="class--heading text-center ">Robotics With Arduino </h1>
               <p class="class--intro">This course is a fresh take on learning robotics with arduino, standing out from the traditional tutorial guides on arduino, 
                 We take the students on a journey to build interesting Robotics projects from scratch . 
