--- a/about.html
+++ b/about.html
@@ -168,9 +168,13 @@
                               <p class="level">Level – Absolute Beginner</p>
                               <p class="pt-5">What do you get from this course?</p>
                               <ul>
-                                <li>We would be covering the complete syllabus in an adequate rate to face the term examinations</li>
-                                <li>All the lessons would be demonstrated practically through real world example digital clips that would create more sense and interest towards learning materials.</li>
-                                <li>Past paper discussion in the end of each lesson and each term.</li>                            
+                                <li>4 Complete projects to add in to your portfolio</li>
+                                <li>Tons of Resources to use in Development</li>
+                                <li>Comprehensive understanding in all the Web Technologies.</li>                            
+                                <li>Understanding on Design Principles, Colors and User Experince Design</li>                            
+                                <li>All the lecture notes, recordings and a complete resource pool </li>                            
+                                <li>Best coding practices to stand out from junior developers </li>                            
+                                <li>Hands-on experince on Web Frameworks to make the development journey much easier </li>                            
                               </ul>
                             </div>
                             <div class="course-content">
@@ -257,8 +261,7 @@
           </div>
             <div class="science  crypto-course py-5" id = "crypto">
               <h1 class="class--heading text-center ">Crypto Currency Investing</h1>
-              <p class="class--intro">The importance of Learning English cannot be denied and ignored since English is one of the most common languages spoken in the world. 
-                Through perfect practice and usage of English with a clear guidance would help you to be fluent in English which is a vital qualification for almost every aspect of the modern world.  </p>
+              <p class="class--intro">Learn Crypto Currency Investing with our experienced tutors who have gained the best from it and are involved in Web3. Crypto Investment would give you hands-on knowledge with all the tools and skills that are required to initate your investment portfolio</p>
               <div class="accordion accordion-flush " id="accordionFlushExample">
                   <div class="accordion-item ">
                     <h2 class="accordion-header" id="flush-headingOne">
@@ -273,13 +276,12 @@
                           <p class="level">Level – Beginner</p>
                           <p class="pt-5">What do you get from this course?</p>
                           <ul>
-                            <li>Complete guide to blockchain and cryptocurrency.</li>
-                            <li>Lifetime access to course content updates.</li>
-                            <li>Lifetime access to investment strategies.</li>                            
+                            <li>We would be covering the complete syllabus in an adequate rate to face the term examinations</li>
+                            <li>All the lessons would be demonstrated practically through real world example digital clips that would create more sense and interest towards learning materials.</li>
+                            <li>Past paper discussion in the end of each lesson and each term.</li>                            
                           </ul>
                         </div>
                         <div class="course-content">
-                          
                           <h2>Module Content</h2>
                           <div class="course-content-list">
                             <h4>Introduction to the word of cryptocurreny.</h4>
@@ -292,7 +294,7 @@
                             <h4>Centralized Exchanges</h4>
                             <h4>Additional Content.</h4>
                           </div>
-                          
+
                         </div>
                       </div>
                     </div>
